<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phlo.myapplication.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnCadastroParti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CadastroParticipante"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnReserva"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="11dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reservar"
        tools:ignore="MissingConstraints"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastroLivro"
        android:layout_marginStart="27dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnCadastroLivro"
        android:layout_marginLeft="27dp" />

    <Button
        android:id="@+id/btnCadastroLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastroLivro"
        tools:ignore="MissingConstraints"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnLIstaReserva"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/participantes"
        android:layout_width="336dp"
        android:layout_height="0dp"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastroParti"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="14dp" />

    <Button
        android:id="@+id/btnLIstaReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_reserva"
        android:layout_marginStart="10dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnCadastroLivro"
        android:layout_marginLeft="10dp" />

</android.support.constraint.ConstraintLayout>
